# tree-sitter-forester

./: .gitignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  bundle.sh  compile_nova.sh  flake.nix  frct-0001.tree  frct-000B.tree  frct-000H.tree  frct-000Y.tree  frct-001P.tree  frct-001S.tree  frct-0020.tree  frct-0021.tree  frct-003Q.tree  generate-tests.sh  grammar.js  init.lua  jms-0001.tree  jms-0004.tree  jms-0007.tree  jms-0009.tree  jms-000E.tree  jms-000K.tree  jms-000R.tree  jms-001E.tree  jms-001G.tree  jms-001R.tree  jms-002Q.tree  jms-002R.tree  jms-003H.tree  jms-003V.tree  jms-003W.tree  jms-003Y.tree  jms-0042.tree  (+225 more)
events/: hottccq-2024.tree  ias-special-year.tree  lics-2024.tree  mfps-2024.tree  pittsposium-2023.tree
institutions/: cmu.tree  inkandswitch.tree  inria.tree  irif.tree  janestreet.tree  jms-00G5.tree  jms-00GC.tree  jms-00GF.tree  jms-00GP.tree  jms-00VE.tree  jms-00XB.tree  jms-00XZ.tree  jms-00Y0.tree  jms-00Y1.tree  jms-0113.tree  lip6.tree
journals/: toplas.tree
nix/: devshell.nix  hook.nix
queries/: highlights.scm
refs/: aagaard-sterling-birkedal-2023.tree  abbes-2006.tree  abchfl-2021.tree  ahrens-lumsdaine-2019.tree  altenkirch-dybjer-hofmann-scott-2001.tree  angiuli-2019.tree  angiuli-harper-2017.tree  arkor-mcdermott-2023-formal.tree  arnold-nivat-1980.tree  awodey-2022-universes.tree  awodey-warren-2009.tree  bardomiano-martínez-2023.tree  bgcmb-2016.tree  birkedal-støvring-thamsborg-2010-solution.tree  bizjak-2016.tree  bizjak-birkedal-2018-entcs.tree  bmss-2011.tree  (+119 more)
(+628 files in other folders)
